--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced React App</title>
+    <title>Advanced React Apppp</title>
 </head>
 <body>
-    <h2>Hello express and EJS -- <%= answer%></h2>
+    <div id="root">
+        Loading ...
+    </div>
+    <script src="/public/bundle.js" charset="utf-8"></script>
 </body>
 </html>
